Feat: Login added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Toolbar-->
     <div class="bg-dark p-2 py-3 text-end">
         <div class="container">
-            <a href="#" class="btn btn-sm btn-danger me-2">Login</a>
+            <a href="login.html" class="btn btn-sm btn-danger me-2">Login</a>
             <a href="#" class="btn btn-sm btn-light">Register</a>
         </div>
     </div>
